err/python-openflow.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyof'...
Listing './lib/python3.5/site-packages/pyof/foundation'...
Compiling './lib/python3.5/site-packages/pyof/foundation/base.py'...
***   File "./lib/python3.5/site-packages/pyof/foundation/base.py", line 694
    msg = f'{cls}.{name} - {pack_exception}'
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyof/foundation/basic_types.py'...
***   File "./lib/python3.5/site-packages/pyof/foundation/basic_types.py", line 480
    raise ValueError(f"BinaryData can't be {type(value)} = '{value}'")
                                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyof/v0x01'...
Listing './lib/python3.5/site-packages/pyof/v0x01/asynchronous'...
Listing './lib/python3.5/site-packages/pyof/v0x01/common'...
Listing './lib/python3.5/site-packages/pyof/v0x01/controller2switch'...
Compiling './lib/python3.5/site-packages/pyof/v0x01/controller2switch/packet_out.py'...
***   File "./lib/python3.5/site-packages/pyof/v0x01/controller2switch/packet_out.py", line 131
    raise ValidationError(f'{self.in_port} is not a valid input port.')
                                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyof/v0x01/symmetric'...
Listing './lib/python3.5/site-packages/pyof/v0x04'...
Listing './lib/python3.5/site-packages/pyof/v0x04/asynchronous'...
Listing './lib/python3.5/site-packages/pyof/v0x04/common'...
Compiling './lib/python3.5/site-packages/pyof/v0x04/common/action.py'...
***   File "./lib/python3.5/site-packages/pyof/v0x04/common/action.py", line 118
    raise ValueError(f'Invalid value "{value}" for Action*.get_size()')
                                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyof/v0x04/common/flow_match.py'...
***   File "./lib/python3.5/site-packages/pyof/v0x04/common/flow_match.py", line 368
    raise PackException(f'Match can\'t unpack "{value}".')
                                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyof/v0x04/controller2switch'...
Listing './lib/python3.5/site-packages/pyof/v0x04/symmetric'...
Listing './lib/python3.5/site-packages/python_openflow-2017.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
